--- a/app/src/main/res/layout/fragment_blogs.xml
+++ b/app/src/main/res/layout/fragment_blogs.xml
@@ -26,5 +26,4 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="1.0" />
 
-
-    ></androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
