--- a/app/src/main/res/layout/fragment_more_information.xml
+++ b/app/src/main/res/layout/fragment_more_information.xml
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         app:boxStrokeColor="@color/sky_blue"
         app:boxStrokeWidth="1dp"
-        android:id="@+id/name"
+        android:id="@+id/names"
         android:layout_marginTop="60dp"
         android:layout_marginHorizontal="50sp"
         android:hint="Name"
@@ -130,14 +130,45 @@
         app:boxCornerRadiusTopStart="20dp"
         app:layout_constraintTop_toBottomOf="@id/view">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
-            android:padding="15dp"
-            />
-
+        <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:hint="Name"
+                    android:id="@+id/name"
+                    android:textSize="17sp"
+                    />
     </com.google.android.material.textfield.TextInputLayout>
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        app:boxStrokeColor="@color/sky_blue"-->
+<!--        android:layout_marginHorizontal="50sp"-->
+<!--        android:id="@+id/phone_number"-->
+<!--        app:boxCornerRadiusBottomEnd="20dp"-->
+<!--        app:boxCornerRadiusBottomStart="20dp"-->
+<!--        app:boxCornerRadiusTopEnd="20dp"-->
+<!--        app:boxCornerRadiusTopStart="20dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/account"-->
+<!--        >-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:inputType="number"-->
+<!--            android:padding="15dp"-->
+<!--            android:hint="Phone number"-->
+<!--            android:maxLength="10"-->
+<!--            android:id="@+id/phone"-->
+<!--            android:drawablePadding="15dp"-->
+<!--            android:drawableStart="@drawable/india"-->
+<!--            android:textSize="17sp"-->
+<!--            />-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -153,12 +184,13 @@
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/name">
+        app:layout_constraintTop_toBottomOf="@id/names">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="17sp"
+            android:id="@+id/emails"
             android:padding="15dp"
             />
 
@@ -186,6 +218,7 @@
             android:textSize="17sp"
             android:padding="15dp"
             android:drawablePadding="10dp"
+            android:id="@+id/phone_numbers"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -211,6 +244,7 @@
             android:layout_height="wrap_content"
             android:textSize="17sp"
             android:padding="15dp"
+            android:id="@+id/birth"
             android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
             android:drawablePadding="10dp"
             />
@@ -238,6 +272,7 @@
             android:layout_height="wrap_content"
             android:textSize="17sp"
             android:padding="15dp"
+            android:id="@+id/categorys"
             android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
             android:drawablePadding="10dp"
             />
