--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -19,7 +19,8 @@
             app:destination="@id/resetPassword" />
         <action
             android:id="@+id/action_home2_self"
-            app:destination="@id/home" />
+            app:destination="@id/home"
+            />
         <action
             android:id="@+id/action_home2_to_library"
             app:destination="@id/library"
